[gd_scene load_steps=44 format=3 uid="uid://ce88oyml5ok6q"]

[ext_resource type="Script" path="res://Scripts/GameControler.gd" id="1_1y343"]
[ext_resource type="Script" path="res://Scripts/CameraControl.gd" id="3_3fy6h"]
[ext_resource type="Texture2D" uid="uid://cjci4sp0asq2t" path="res://Artwork/UI/Tools/1.png" id="3_h4ajo"]
[ext_resource type="Texture2D" uid="uid://tgckc1g66u7r" path="res://Artwork/UI/Tools/2.png" id="4_5svvl"]
[ext_resource type="Texture2D" uid="uid://bweofvqed0tjm" path="res://Artwork/UI/Geral/border.png" id="4_tivhf"]
[ext_resource type="Script" path="res://Scripts/SkillEdit.gd" id="4_uldr8"]
[ext_resource type="Texture2D" uid="uid://tg2gkyexr4kf" path="res://Artwork/UI/Geral/skill.png" id="5_2oqy2"]
[ext_resource type="Texture2D" uid="uid://c0l5ewsfht1rg" path="res://Artwork/UI/Tools/3.png" id="5_dyyxj"]
[ext_resource type="Script" path="res://Scripts/ToolsMenu.gd" id="5_y4l80"]
[ext_resource type="Texture2D" uid="uid://c0tattxcwlqh0" path="res://Artwork/UI/Tools/4.png" id="6_2k12u"]
[ext_resource type="Texture2D" uid="uid://dsvbn6bxvnn1a" path="res://Artwork/UI/Tools/save.png" id="6_pjndk"]
[ext_resource type="Texture2D" uid="uid://b8hipnkomvirw" path="res://Artwork/Fonts/exclamation.png" id="7_c36rh"]
[ext_resource type="Texture2D" uid="uid://dlajobyavos2o" path="res://Artwork/UI/Tools/bucket.png" id="7_gn7w0"]
[ext_resource type="Texture2D" uid="uid://blqse4ahn208y" path="res://Artwork/UI/Tools/ads12.png" id="7_mk2dr"]
[ext_resource type="Texture2D" uid="uid://sbh7123k1ua0" path="res://Artwork/UI/Tools/asdadsd12.png" id="8_l8ccs"]
[ext_resource type="Texture2D" uid="uid://dc5xte6mg7cqf" path="res://Artwork/Fonts/question.png" id="8_pm2ep"]
[ext_resource type="Texture2D" uid="uid://cu22q1bpup1gq" path="res://Artwork/UI/Geral/bar-sheet.png" id="8_tswst"]
[ext_resource type="Texture2D" uid="uid://c0f0h5k7g5ulp" path="res://Artwork/UI/Tools/asdasd.png" id="8_uwl5n"]
[ext_resource type="Texture2D" uid="uid://kc2s5tyo1bv8" path="res://Artwork/UI/Tools/asdasddas.png" id="9_1nrud"]
[ext_resource type="Texture2D" uid="uid://dvg6qitsu3pbe" path="res://Artwork/UI/Geral/colorpicker.png" id="9_fbcid"]
[ext_resource type="Script" path="res://Scripts/ColorPallete.gd" id="9_qfxu6"]
[ext_resource type="Texture2D" uid="uid://cupxk3ruxc8c7" path="res://Artwork/UI/Tools/check.png" id="11_pidg6"]
[ext_resource type="Texture2D" uid="uid://s77vd4njftsn" path="res://Artwork/UI/Tools/addgold.png" id="15_5xgoq"]
[ext_resource type="Texture2D" uid="uid://dre82jnfnweei" path="res://Artwork/UI/Tools/music_off.png" id="15_l1abg"]
[ext_resource type="Texture2D" uid="uid://dxw2y8vgg4k1o" path="res://Artwork/UI/Tools/linegold.png" id="17_skq0f"]
[ext_resource type="Texture2D" uid="uid://c1hk0dyvyvpqe" path="res://Artwork/UI/Tools/movegold.png" id="19_vis5n"]
[ext_resource type="Texture2D" uid="uid://fd06gxe14tq8" path="res://Artwork/UI/Tools/smalll.png" id="20_fbjbo"]
[ext_resource type="Texture2D" uid="uid://dj0yonqowwuj2" path="res://Artwork/UI/Tools/arrowgold.png" id="21_001ou"]
[ext_resource type="FontFile" uid="uid://0rtn3xa50dfs" path="res://Artwork/Fonts/Mystery Font(1).ttf" id="23_anpot"]
[ext_resource type="Texture2D" uid="uid://7fwl0pr10ata" path="res://Artwork/UI/Tools/plus.png" id="24_ckonv"]
[ext_resource type="Texture2D" uid="uid://bc5lu45nereln" path="res://Artwork/UI/Tools/bucket-GOLD.png" id="24_dmqcu"]
[ext_resource type="Texture2D" uid="uid://ck8oallacorcq" path="res://Artwork/UI/Tools/minus.png" id="25_rlmj3"]
[ext_resource type="Script" path="res://Scripts/FileButton.gd" id="26_6dnt3"]
[ext_resource type="Theme" uid="uid://d4klxd0nfjfgl" path="res://Resources/main_base.tres" id="26_st2tv"]
[ext_resource type="Texture2D" uid="uid://hxvjtgucsfj2" path="res://Artwork/UI/Tools/sound_on.png" id="36_jl6a2"]
[ext_resource type="Texture2D" uid="uid://ds3dwgm0yl2w3" path="res://Artwork/UI/Tools/sound_off.png" id="37_vs1st"]
[ext_resource type="Script" path="res://Scenes/SoundManager.gd" id="38_06hwi"]
[ext_resource type="Texture2D" uid="uid://dpgul02n3nq1x" path="res://Artwork/UI/Tools/music_on.png" id="38_htveu"]
[ext_resource type="AudioStream" uid="uid://1puatpj50610" path="res://Resources/Sounds/drag.wav" id="39_lmnun"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_018ih"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_lg38q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_6toqf"]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvfno"]
_data = {
"RESET": SubResource("Animation_lg38q"),
"Start": SubResource("Animation_6toqf")
}

[node name="MainBase" type="Node2D"]
script = ExtResource("1_1y343")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 83769.0
offset_top = 50608.0
offset_right = 97591.0
offset_bottom = 59633.0
scale = Vector2(-10.413, -10.413)
mouse_filter = 2
color = Color(0.376471, 0.376471, 0.439216, 1)

[node name="Stars" type="Node2D" parent="."]

[node name="Lines" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 273)
script = ExtResource("3_3fy6h")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SkillEdit" type="Control" parent="GUI" groups=["SkillEdit"]]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -992.0
offset_top = -65.0
offset_right = -747.0
offset_bottom = -105.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.2, 1.2)
mouse_filter = 2
script = ExtResource("4_uldr8")

[node name="TextureRect" type="TextureRect" parent="GUI/SkillEdit" groups=["is_hovered()"]]
layout_mode = 0
offset_left = 27.0
offset_top = 91.0
offset_right = 91.0
offset_bottom = 219.0
scale = Vector2(3, 3)
texture = ExtResource("5_2oqy2")

[node name="Title" type="LineEdit" parent="GUI/SkillEdit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 148.0
offset_right = 87.0
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.59789, 0.59789)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("23_anpot")
theme_override_font_sizes/font_size = 32
placeholder_text = "Here"
flat = true

[node name="Desc" type="TextEdit" parent="GUI/SkillEdit"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = 210.0
offset_right = 89.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.59789, 0.59789)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("23_anpot")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_018ih")
placeholder_text = "Here"
wrap_mode = 1
caret_blink = true
text_direction = 1

[node name="SaveButton" type="TextureButton" parent="GUI/SkillEdit"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.1667
offset_top = -73.3333
offset_right = -58.1667
offset_bottom = -57.3333
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_pjndk")

[node name="Border" type="TextureRect" parent="GUI"]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("4_tivhf")

[node name="Control Menu" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GUI/Control Menu"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.890196, 0.870588, 0.858824, 1)

[node name="TextureRect" type="TextureRect" parent="GUI/Control Menu"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 48.0
mouse_filter = 0
texture = ExtResource("8_tswst")

[node name="Titulo" type="Label" parent="GUI/Control Menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 154.0
offset_right = -167.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/font = ExtResource("23_anpot")
theme_override_font_sizes/font_size = 32
text = "Stellar Forge"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="Test" type="RichTextLabel" parent="GUI/Control Menu"]
visible = false
layout_mode = 0
offset_left = 794.0
offset_top = 46.0
offset_right = 961.0
offset_bottom = 468.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("23_anpot")
theme_override_font_sizes/normal_font_size = 16
text = "Test"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Control Menu"]
layout_mode = 0
offset_left = 102.0
offset_top = 8.0
offset_right = 526.0
offset_bottom = 28.0
scale = Vector2(2, 2)
theme_override_constants/separation = 2
alignment = 2

[node name="Help" type="TextureButton" parent="GUI/Control Menu/HBoxContainer"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_pm2ep")

[node name="Plus" type="TextureButton" parent="GUI/Control Menu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("24_ckonv")

[node name="Minus" type="TextureButton" parent="GUI/Control Menu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("25_rlmj3")

[node name="Sound" type="TextureButton" parent="GUI/Control Menu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("36_jl6a2")
texture_pressed = ExtResource("37_vs1st")

[node name="Music" type="TextureButton" parent="GUI/Control Menu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("38_htveu")
texture_pressed = ExtResource("15_l1abg")

[node name="SkillOpen" type="TextureButton" parent="GUI/Control Menu/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("7_c36rh")

[node name="Warning" type="RichTextLabel" parent="GUI/Control Menu"]
layout_mode = 0
offset_left = 9.0
offset_top = 517.0
offset_right = 956.0
offset_bottom = 549.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/normal_font = ExtResource("23_anpot")
theme_override_font_sizes/normal_font_size = 32
text = "Test"
fit_content = true
scroll_active = false

[node name="Timer" type="Timer" parent="GUI/Control Menu/Warning"]
wait_time = 1.5

[node name="ToolsMenu" type="BoxContainer" parent="GUI/Control Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 51.0
offset_right = -31.0
offset_bottom = 135.0
grow_horizontal = 0
scale = Vector2(2.5, 2.5)
mouse_filter = 0
theme_override_constants/separation = 1
alignment = 2
vertical = true
script = ExtResource("5_y4l80")
ad1 = ExtResource("3_h4ajo")
ad2 = ExtResource("15_5xgoq")
li1 = ExtResource("4_5svvl")
li2 = ExtResource("17_skq0f")
mv1 = ExtResource("5_dyyxj")
mv2 = ExtResource("19_vis5n")
se1 = ExtResource("6_2k12u")
se2 = ExtResource("21_001ou")

[node name="ColorPallete" type="TextureButton" parent="GUI/Control Menu/ToolsMenu"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("7_gn7w0")
texture_pressed = ExtResource("24_dmqcu")
script = ExtResource("9_qfxu6")

[node name="TextureRect" type="TextureRect" parent="GUI/Control Menu/ToolsMenu/ColorPallete"]
layout_mode = 2
offset_left = -65.0
offset_right = -1.0
offset_bottom = 56.0
mouse_default_cursor_shape = 2
texture = ExtResource("9_fbcid")

[node name="ColorButtons" type="Control" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="43434f" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 6.0
offset_top = 11.0
offset_right = 14.0
offset_bottom = 19.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="ffffeb" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 17.2
offset_top = 11.0
offset_right = 25.2
offset_bottom = 19.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="7e7e8f" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 28.0
offset_top = 11.0
offset_right = 36.0
offset_bottom = 19.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="c2c2d1" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 39.2
offset_top = 11.0
offset_right = 47.2
offset_bottom = 19.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="8c3f5d" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 51.2
offset_top = 11.0
offset_right = 59.2
offset_bottom = 19.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="ba6156" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 6.0
offset_top = 22.0
offset_right = 14.0
offset_bottom = 30.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="eb564b" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 17.2
offset_top = 22.0
offset_right = 25.2
offset_bottom = 30.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="f2a65e" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 28.4
offset_top = 22.0
offset_right = 36.4
offset_bottom = 30.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="3ca370" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 39.2
offset_top = 22.0
offset_right = 47.2
offset_bottom = 30.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="5dde87" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 51.2
offset_top = 22.0
offset_right = 59.2
offset_bottom = 30.0
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="6476e8" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 6.0
offset_top = 32.8
offset_right = 14.0
offset_bottom = 40.8
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="86a7ed" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 17.2
offset_top = 32.8
offset_right = 25.2
offset_bottom = 40.8
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="ffe478" type="Button" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 28.0
offset_top = 32.8
offset_right = 36.0
offset_bottom = 40.8
scale = Vector2(0.8, 0.8)
mouse_default_cursor_shape = 2
flat = true

[node name="CheckButton" type="TextureButton" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 0
offset_left = 49.6
offset_top = 41.2
offset_right = 65.6
offset_bottom = 57.2
scale = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("11_pidg6")

[node name="ColorRect" type="ColorRect" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons"]
layout_mode = 2
offset_left = 40.0
offset_top = 34.0
offset_right = 57.0
offset_bottom = 39.0

[node name="HexChoose" type="LineEdit" parent="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 40.0
offset_right = 176.0
offset_bottom = 106.0
scale = Vector2(0.170706, 0.170706)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("23_anpot")
theme_override_font_sizes/font_size = 32
placeholder_text = "#ffffff"
max_length = 7
flat = true

[node name="1-Add" type="TextureButton" parent="GUI/Control Menu/ToolsMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_h4ajo")

[node name="Medium" type="TextureButton" parent="GUI/Control Menu/ToolsMenu/1-Add"]
layout_mode = 0
offset_left = -32.0
offset_top = -0.181824
offset_right = -16.0
offset_bottom = 15.8182
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_mk2dr")

[node name="Small" type="TextureButton" parent="GUI/Control Menu/ToolsMenu/1-Add"]
layout_mode = 2
offset_left = -16.3636
offset_top = -0.0909128
offset_right = -0.363636
offset_bottom = 15.9091
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("20_fbjbo")

[node name="Big" type="TextureButton" parent="GUI/Control Menu/ToolsMenu/1-Add"]
layout_mode = 2
offset_left = -48.0
offset_top = -0.0909121
offset_right = -32.0
offset_bottom = 15.9091
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_l8ccs")

[node name="2-Line" type="TextureButton" parent="GUI/Control Menu/ToolsMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_5svvl")

[node name="Fill" type="TextureButton" parent="GUI/Control Menu/ToolsMenu/2-Line"]
visible = false
layout_mode = 0
offset_left = -16.3636
offset_top = 0.181817
offset_right = -0.363636
offset_bottom = 16.1818
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_uwl5n")

[node name="Traced" type="TextureButton" parent="GUI/Control Menu/ToolsMenu/2-Line"]
visible = false
layout_mode = 0
offset_left = -32.2727
offset_top = 0.18182
offset_right = -16.2727
offset_bottom = 16.1818
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_1nrud")

[node name="3-Move" type="TextureButton" parent="GUI/Control Menu/ToolsMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("5_dyyxj")

[node name="4-Select" type="TextureButton" parent="GUI/Control Menu/ToolsMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("6_2k12u")

[node name="FileButton" type="MenuButton" parent="GUI/Control Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -11.0
offset_right = 99.0
offset_bottom = 26.0
grow_vertical = 2
theme = ExtResource("26_st2tv")
theme_override_colors/font_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/font = ExtResource("23_anpot")
theme_override_font_sizes/font_size = 32
text = "FILE"
icon_alignment = 1
item_count = 4
popup/item_0/text = "Clear"
popup/item_0/id = 2
popup/item_1/text = "Save"
popup/item_1/id = 1
popup/item_2/text = "Save as"
popup/item_2/id = 3
popup/item_3/text = "Load"
popup/item_3/id = 0
script = ExtResource("26_6dnt3")

[node name="Timer" type="Timer" parent="GUI/Control Menu/FileButton"]
wait_time = 0.1

[node name="Vignete" type="ColorRect" parent="GUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Vignete"]
libraries = {
"": SubResource("AnimationLibrary_lvfno")
}

[node name="SaveDialog" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(512, 330)
min_size = Vector2i(200, 71)
theme = ExtResource("26_st2tv")
ok_button_text = "Save"
access = 2
root_subfolder = "saves"

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(622, 330)
min_size = Vector2i(200, 71)
theme = ExtResource("26_st2tv")
ok_button_text = "Open"
file_mode = 0
access = 2
root_subfolder = "Saves"

[node name="Music" type="Node" parent="."]
script = ExtResource("38_06hwi")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("39_lmnun")
pitch_scale = 0.93
bus = &"Effects"

[connection signal="button_down" from="GUI/SkillEdit/SaveButton" to="GUI/SkillEdit" method="_on_save_button_button_down"]
[connection signal="button_down" from="GUI/Control Menu/HBoxContainer/Help" to="GUI/Control Menu/ToolsMenu" method="_on_help_button_down"]
[connection signal="button_down" from="GUI/Control Menu/HBoxContainer/Plus" to="GUI/Control Menu/ToolsMenu" method="_on_plus_button_down"]
[connection signal="button_down" from="GUI/Control Menu/HBoxContainer/Minus" to="GUI/Control Menu/ToolsMenu" method="_on_minus_button_down"]
[connection signal="button_down" from="GUI/Control Menu/HBoxContainer/Sound" to="GUI/Control Menu/ToolsMenu" method="_on_sound_button_down"]
[connection signal="button_down" from="GUI/Control Menu/HBoxContainer/Music" to="GUI/Control Menu/ToolsMenu" method="_on_music_button_down"]
[connection signal="button_down" from="GUI/Control Menu/HBoxContainer/SkillOpen" to="GUI/Control Menu/ToolsMenu" method="_on_skill_open_button_down"]
[connection signal="finished" from="GUI/Control Menu/Warning" to="." method="_on_warning_finished"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete" to="GUI/Control Menu/ToolsMenu" method="_on_color_pallete_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/43434f" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_f_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/ffffeb" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_ffffeb_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/7e7e8f" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_e_7e_8f_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/c2c2d1" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_c_2c_2d_1_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/8c3f5d" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_c_3f_5d_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/ba6156" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_ba_6156_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/eb564b" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_eb_564b_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/f2a65e" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_f_2a_65e_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/3ca370" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_ca_370_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/5dde87" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_dde_87_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/6476e8" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_e_8_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/86a7ed" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_a_7_ed_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/ffe478" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_ffe_478_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/ColorPallete/TextureRect/ColorButtons/CheckButton" to="GUI/Control Menu/ToolsMenu/ColorPallete" method="_on_check_button_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/1-Add" to="GUI/Control Menu/ToolsMenu" method="_on_add_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/1-Add/Medium" to="GUI/Control Menu/ToolsMenu" method="_on_medium_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/1-Add/Small" to="GUI/Control Menu/ToolsMenu" method="_on_small_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/1-Add/Big" to="GUI/Control Menu/ToolsMenu" method="_on_big_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/2-Line" to="GUI/Control Menu/ToolsMenu" method="_on_line_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/2-Line/Fill" to="GUI/Control Menu/ToolsMenu" method="_on_fill_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/2-Line/Traced" to="GUI/Control Menu/ToolsMenu" method="_on_traced_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/3-Move" to="." method="_on_move_button_down"]
[connection signal="button_down" from="GUI/Control Menu/ToolsMenu/4-Select" to="." method="_on_select_button_down"]
[connection signal="confirmed" from="SaveDialog" to="GUI/Control Menu/FileButton" method="_on_save_dialog_confirmed"]
[connection signal="file_selected" from="SaveDialog" to="GUI/Control Menu/FileButton" method="_on_save_dialog_file_selected"]
